# pymorphic

./: README.md  mypy.ini  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
hooks/: pre-commit
src/pymorphic/: math.py
tests/: test_math.py
